--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 body {
     margin: auto;
     padding: 0%;
+    color: rgb(0, 0, 0);
+}
+
+h1 {
+    margin-left: 85px;
 }
 
 .photos {
@@ -9,6 +14,125 @@ body {
     justify-content: center;
 }
 
-img {
+.img {
+    display: inline-block;
     margin: 10px;
+    width: 380px;
+    height: 220px;
+    background-position: 50% 50%;
+    background-size: cover;
+    cursor: pointer;
+}
+
+.photo {
+    width: 380px;
+    height: 200px;
+    background: grey;
+    margin: 10px;
+}
+
+.search {
+    width: 400px;
+    height: 40px;
+    left: 107px;
+    top: 124px;
+    border: 1px solid #8D1A1A;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    margin-left: 85px;
+    margin-bottom: 30px;
+}
+
+.search:active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
+}
+
+.button {
+    width: 100px;
+    height: 44px;
+    left: 681px;
+    top: 124px;
+    background: #8D1A1A;
+    color: white;
+    border: none;
+}
+
+.button:active {
+    background: #000000;
+}
+
+.time {
+    display: flex;
+    margin-right: 85px;
+}
+
+.search-and-time {
+    display: flex;
+    justify-content: space-between
+}
+
+h2 {
+    font-size: 35px;
+    margin: 0%;
+}
+
+
+@media(max-width: 900px){
+    .search-and-time {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    .time {
+        display: flex;
+        margin:auto;
+    }
+
+    h1 {
+        margin: auto;
+        margin-bottom: 30px;
+    }
+
+    .search {
+        margin-left: auto;
+        margin-bottom: 30px;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+    .get-photos {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+    }
+
+}
+@media(max-width: 600px){
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .time {
+        display: flex;
+        margin: auto;
+    }
+
+    .get-photos {
+        display: flex;
+        justify-content: center;
+    }
+
+    h1 {
+        margin: auto;
+        margin-bottom: 30px;
+    }
+
+    .search {
+        margin-left: auto;
+        margin-bottom: 30px;
+    }
 }
